[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Map1.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/dragon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Level1.gd" type="Script" id=4]
[ext_resource path="res://Scenes/bat.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/blocking.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/slime.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/bat_follower.tscn" type="PackedScene" id=8]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Map1" parent="." instance=ExtResource( 2 )]
light_mask = 0

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 147, 309 )
scale = Vector2( 7, 7 )

[node name="dragon" parent="." instance=ExtResource( 3 )]
position = Vector2( 4718, -827 )
scale = Vector2( 2.17457, 2.17457 )

[node name="slime" parent="." instance=ExtResource( 7 )]
position = Vector2( 1747, 352 )

[node name="slime2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1900, 264 )

[node name="slime3" parent="." instance=ExtResource( 7 )]
position = Vector2( 1601, 234 )

[node name="slime4" parent="." instance=ExtResource( 7 )]
position = Vector2( 2199, -287 )

[node name="slime5" parent="." instance=ExtResource( 7 )]
position = Vector2( 1647, -241 )

[node name="slime6" parent="." instance=ExtResource( 7 )]
position = Vector2( 2398, 142 )

[node name="slime7" parent="." instance=ExtResource( 7 )]
position = Vector2( 2103, 8 )

[node name="bat" parent="." instance=ExtResource( 5 )]
position = Vector2( 3260, 226 )

[node name="bat2" parent="." instance=ExtResource( 5 )]
position = Vector2( 3521, -459 )

[node name="bat3" parent="." instance=ExtResource( 5 )]
position = Vector2( 4294, -432 )

[node name="bat_follower" parent="." instance=ExtResource( 8 )]
position = Vector2( 4891, -78 )

[node name="blocking" parent="." instance=ExtResource( 6 )]
position = Vector2( 2788, -237 )
